--- a/task/browse.html
+++ b/task/browse.html
@@ -66,7 +66,7 @@
 								</ul>
 							</div>
 						</div>
-						<div ng-show="isOpen(selectedTask) && !isTaskCreator(selectedTask) && !alreadyOffered">
+						<div ng-show="isOpen(selectedTask) && loggedIn && !isTaskCreator(selectedTask) && !alreadyOffered">
 							<button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#offModal">Make an Offer</button>
 						</div>
 				
@@ -145,8 +145,8 @@
 								</div>									
 							</div><br>
 
-							<div class="row" ng-show="isOpen(selectedTask)">
-								<div class="col-md-12">
+							<div class="row" ng-show="isOpen(selectedTask) && loggedIn">
+								<div class="col-md-12"> 
 									<form ng-submit="addComment(selectedTask)">	
 										<div class="input-group">
 											<div class="input-group-addon">
