--- a/task/browse.html
+++ b/task/browse.html
@@ -69,6 +69,9 @@
 						<div ng-show="isOpen(selectedTask) && signedIn && !isTaskCreator(selectedTask) && !alreadyOffered">
 							<button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#offModal">Make an Offer</button>
 						</div>
+						<div ng-show="!signedIn">
+							<button class="btn btn-danger btn-sm">Must be logged in</button>
+						</div>
 				
 						<div ng-show="isAssignee(selectedTask) && !isCompleted(selectedTask)">
 							<button class="btn btn-danger btn-sm" ng-click="completeTask(selectedTask._id)">Complete</button>
@@ -158,6 +161,11 @@
 											<input type="submit" class="btn btn-info" value="Comment">
 										</span>
 									</form>
+							</div>
+							<div class="row" ng-show="isOpen(selectedTask) && !signedIn">
+								<div class="col-md-12"> 
+									<button class="btn btn-danger btn-sm">Must be logged in</button>
+								</div>
 							</div>
 						</div>
 					</div>
