--- a/home/home.html
+++ b/home/home.html
@@ -3,28 +3,30 @@
 <p>Sidegig is the easiest way to get everything done at an unbeatable value.</p>
 <hr />
 <h3>How It Works</h3>
+
+<h4></h4>
 <div class="row">
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel-heading">Sign up for free</div>
+			<div class="panel-heading">Get things done</div>
 			<div class="panel-body">
-				<p>Signing up takes less than 2 minutes. It's free to join SideGig</p>
+				<p>People who love what they do help you get everything done at an unbeatable value.</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">	
 		<div class="panel panel-primary">
-			<div class="panel-heading">Easy browsing</div>
+			<div class="panel-heading">Start selling</div>
 			<div class="panel-body">
-				<p>Our search engine and our intuitive filters help you find exactly what you are looking for</p>
+				<p>What do you do best? Create your Gig and start selling. It's free, and only takes 5 minutes.</p>
 			</div>
 		</div>
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel-heading">Place your task</div>
+			<div class="panel-heading">Your safety is our top priority. Secure transactions and our safety team protect you at all times.</div>
 			<div class="panel-body">
-				<p>We only release payment to the Seller once the order has been delivered and approved by you</p>
+				<p>We only release payment once the order has been delivered and approved by you</p>
 			</div>
 		</div>
 	</div>
