--- a/home/home.html
+++ b/home/home.html
@@ -8,7 +8,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel-heading">Get things done</div>
+			<h4 class="panel-heading">Get things done</h4>
 			<div class="panel-body">
 				<p>People who love what they do help you get everything done at an unbeatable value.</p>
 			</div>
