--- a/home/home.html
+++ b/home/home.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="col-md-4">	
 		<div class="panel panel-primary">
-			<div class="panel-heading">Start selling</div>
+			<h4 class="panel-heading">Start selling</h4>
 			<div class="panel-body">
 				<p>What do you do best? Create your Gig and start selling. It's free, and only takes 5 minutes.</p>
 			</div>
@@ -24,7 +24,7 @@
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel-heading">Your safety is our top priority. Secure transactions and our safety team protect you at all times.</div>
+			<h4 class="panel-heading">Your safety is our top priority. Secure transactions and our safety team protect you at all times.</h4>
 			<div class="panel-body">
 				<p>We only release payment once the order has been delivered and approved by you</p>
 			</div>
