--- a/home/home.html
+++ b/home/home.html
@@ -24,9 +24,12 @@
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<h4 class="panel-heading">Your safety is our top priority. Secure transactions and our safety team protect you at all times.</h4>
+			<h4 class="panel-heading">Trust & Safety</h4>
 			<div class="panel-body">
+				<p>Your safety is our top priority. Secure transactions and our safety team protect you at all times.</p>
+<!--
 				<p>We only release payment once the order has been delivered and approved by you</p>
+-->
 			</div>
 		</div>
 	</div>
