--- a/home/home.html
+++ b/home/home.html
@@ -45,7 +45,7 @@
     <div class="card-content">
 
         <div class="card-image">
-            <img src="./image.jpg" alt="Loading image...">
+            <img src="images/browse.jpg" alt="Loading image...">
             <h3 class="card-image-headline">Lorem Ipsum Dolor</h3>
         </div>
 
