--- a/home/home.html
+++ b/home/home.html
@@ -7,7 +7,7 @@
 <h4></h4>
 <div class="row">
 	<div class="col-md-4">
-		<div class="panel panel-primary">
+		<div class="panel panel-info">
 			<h4 class="panel-heading">Get things done</h4>
 			<div class="panel-body">
 				<p>People who love what they do help you get everything done at an unbeatable value.</p>
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="col-md-4">	
-		<div class="panel panel-primary">
+		<div class="panel panel-info">
 			<h4 class="panel-heading">Start selling</h4>
 			<div class="panel-body">
 				<p>What do you do best? Create your Gig and start selling. It's free, and only takes 5 minutes.</p>
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<div class="panel panel-primary">
+		<div class="panel panel-info">
 			<h4 class="panel-heading">Trust & Safety</h4>
 			<div class="panel-body">
 				<p>Your safety is our top priority. Secure transactions and our safety team protect you at all times.</p>
