--- a/home/home.html
+++ b/home/home.html
@@ -7,7 +7,7 @@
 <h4></h4>
 <div class="row">
 	<div class="col-md-4">
-		<div class="panel panel-info">
+		<div class="panel panel-danger">
 			<h4 class="panel-heading">Get things done</h4>
 			<div class="panel-body">
 				<p>People who love what they do help you get everything done at an unbeatable value.</p>
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="col-md-4">	
-		<div class="panel panel-info">
+		<div class="panel panel-danger">
 			<h4 class="panel-heading">Start selling</h4>
 			<div class="panel-body">
 				<p>What do you do best? Create your Gig and start selling. It's free, and only takes 5 minutes.</p>
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<div class="panel panel-info">
+		<div class="panel panel-danger">
 			<h4 class="panel-heading">Trust & Safety</h4>
 			<div class="panel-body">
 				<p>Your safety is our top priority. Secure transactions and our safety team protect you at all times.</p>
@@ -34,10 +34,10 @@
 		</div>
 	</div>
 	<div class="text-center">
-		<a ng-href="#/register" class="btn btn-primary btn-lg">Get Started</a>
+		<a ng-href="#/register" class="btn btn-danger btn-lg">Get Started</a>
 	</div>
 </div>
-
+<!--
 <div class="card">
 
     <div class="card-height-indicator"></div>
@@ -61,7 +61,7 @@
     </div>
 
 </div>
-
+-->
 <!--
 <div class="list-group"  ng-repeat="task in tasks">
 	<div class="list-group-item">
