--- a/home/home.html
+++ b/home/home.html
@@ -1,4 +1,4 @@
-<h2 class="title">Live Smarter with Sidegig.me</h2>
+<h2 class="title">Live Smarter with Sidegig.me <code>Beta</code></h2>
 <p>What do you need done?</p>
 <p>Sidegig is the easiest way to get everything done at an unbeatable value.</p>
 <hr />
