--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
 <!doctype html>
-<!--  
-
-    88888888o.                 .                                                                 
-    888    888               .o8                                              .ooooooo.   oooo   oooo  oooo
-    888    888   888888o.  .o888oo    888880.  ooo. .oo.  .oo.    .o88888o.   888         `888   `888  888'
-    888    888        888    888          888  `888P"Y88bP"Y88b   888         888oooo      888    `888888'
-    888    888  .o8888888    888    .o8888888   888   888   888   888         888          888      `888'
-    888    888  888   888    888 .  888   888   888   888   888   888         888          888       88'   .o.
-    888888888'  `Y8bod8P'    "888"  `Y8bod8P'  o888o o888o o888o  `Y8bod8P'  o888o        o888o     88'    Y8P     
-
-                                                                                                                -->
 <html lang="en" ng-app="SideGigApp">
 <head>
 	<meta charset="utf-8">
@@ -49,7 +38,11 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<p class="text-muted">Fit Stack v<span app-version></span></p>
+			<p class="text-muted">
+				Powered by <a href="http://flybase.io">Flybase.io</a> /
+				Built on the <a href="https://github.com/flybaseio/fit-stack/">Fit Stack</a> v<span app-version></span>
+				Sidegig is an <a href="http://mvpin30.com">MVPin30 project</a>
+			</p>
 		</div>
 	</footer>
 	<!-- JS -->
