--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!--
         <title ng-if="!$state">SideGig.Me - Loading...</title>
         <title ng-if="$state">SideGig.Me - {{$state.current.title}}</title>
-
+-->
+        <title>SideGig.Me</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<base ng-href="/">
 	
