--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 	</footer>
 	<!-- JS -->
-	<script src="bower_components/flybase/flybase.js"></script>
+	<script src="https://cdn.flybase.io/flybase.js"></script>
 	<script src="bower_components/angularfly/angularfly.js"></script>
 
 
